Version 0.8.2

	* Add setters to attribute aliases
	* Added a forgotten deprecation
	* Updated ChangeLog with changes from 0.8.1
	* Updated ChangeLog with changes from 0.8.0 (sorry!)

Version 0.8.1

	* Updated README and GettingStarted guide

Version 0.8.0

	* Deprecated the #get_ from methods that start with #get_
	* Alias #login to #log_in and #logout to #log_out
	* Added RemoteAPI#permission_to_edit_comment?
	* Added UserGroup and related RemoteAPI methods
	* Added RemoteAPI#add_worklog (thanks @FDj)
	* Added ability to initialize JIRA::FieldValue without an array (thanks @knut)

	* Various documentation updates and tweaks

	* Removed handsoap parsing abstraction (roflscale for parsing)
	* Removed the YARD plugin in favour of YARD 0.7 DSL documenting stuff

	* Fix setting the assignee during Issue creation (thanks @ssmiech)

Version 0.7.1

	* Remove AOT compiled files from gem

Version 0.7

	* Added YARD extension for documentation
	* Removed URL class in favour of directly using underlying objects
	* Added AOT compilation for MacRuby
	* Moved RemoteAPI into the JIRA namespace
	* Alias #get_favourite_filter to #get_favorite_filter

	* Tweaked parsing logic more in preparation for the builder generalization
	* Various documentation updates

	* Removed jeweler development dependency
	* Removed yardstick development dependency
	* General tweaking of the rakefile, gemspec, gemfile, and .yardopts

Version 0.6.1

	* Added RemoteAPIAdditions module for conveniences
	* Fix duplicate dependancy listings

Version 0.6

	* Added RemoteAPI#get_projects_without_schemes
	* Added RemoteAPI#delete_project_avatar_with_id
	* Added RemoteAPI#delete_project_with_key
	* Added RemoteAPI#set_project_avatar_for_project_with_key
	* Added RemoteAPI#set_new_project_avatar_for_project_with_key
	* Added RemoteAPI#get_resolution_date_for_issue_with_id
	* Added RemoteAPI#get_resolution_date_for_issue_with_key
	* Added RemoteAPI#get_project_roles and friends
