@@ -5,5 +5,6 @@
 lib/**/*.rb
 -
 docs/GettingStarted.markdown
+docs/Examples.rb
 ChangeLog
 LICENSE.txt
