@@ -33,6 +33,8 @@ Don't forget to log out when you are done:
 
    db.logout
 
+See {file:docs/Examples.rb} for more examples.
+
 To find out what APIs are available, check out the {JIRA::RemoteAPI}
 module, as well as the {JIRA::RemoteAPIAdditions} module for
 conveniences that `jiraSOAP` has added.
